Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95620

QuickBall example crashes after hitting the first target

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.2.0 Beta4, 6.3.0 Alpha
    • 6.2.0 Beta2
    • Quick: 3D
    • None
    • 687b655e9d62e0643439d13f11bb8f5d33850618 (qt/qtquick3d/dev) 1214a774c5d3f3facc3e86fa33405183467e194a (qt/qtquick3d/6.2)
    • Qt Quick 3D - 2021 Week 31/32

      QuickBall example crashes after hitting the first target. The error is a read access violation which happens in the internalPick function of the View3D component.

      Analysis : 

      After hitting a target the hitAnimation inside the qml is started and at the end in runs a script to destroy the Node. When the internalPick function tries to access the frontEndObject of this Node it is destroyed by this time and the application crashes. Commenting the script inside the qml at line 410 makes the application does not crash

        For Gerrit Dashboard: QTBUG-95620
        # Subject Branch Project Status CR V

            hatemelkharashy Hatem ElKharashy
            hatemelkharashy Hatem ElKharashy
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes