Fix picking function crashing after an object is destroyed

a null pointer should be returned by lookUp function
if the object is in the clean up list.

Pick-to: 6.2
Fixes: QTBUG-95620
Change-Id: I74c8fbaa5d210601388041a80b34800873926484
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Antti Määttä <antti.maatta@qt.io>
Reviewed-by: Christian Strømme <christian.stromme@qt.io>